--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,11 +18,13 @@ h3 {
   margin-top: 1rem;
   margin-bottom: 0;
 }
-[class*="col-"] {
+.target {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: rgba(86, 61, 124, .15);
-  border: 1px solid rgba(86, 61, 124, .2);
+  background-color: rgba(86, 61, 124, 0.15);
+  border: 1px solid rgba(86, 61, 124, 0.2);
+  min-height: 40rem;
+  max-height: 40rem;
 }
 
 hr {
