--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,7 +18,9 @@ h3 {
   margin-top: 1rem;
   margin-bottom: 0;
 }
-.target {
+.output-box {
+  margin-left: 1rem;
+  margin-right: 1rem;
   padding-top: 1rem;
   padding-bottom: 1rem;
   background-color: rgba(86, 61, 124, 0.15);
